--- a/examples/templates/itdynamic_generator.html
+++ b/examples/templates/itdynamic_generator.html
@@ -57,6 +57,18 @@ span.qfLabel {
 </head>
 <body>
 
+<table width="100%" height="100%" border=0>
+<tr><td colspan="2" bgcolor="orange"><h1>HeadBanner</h1></td></tr>
+<tr>
+<td bgcolor="#444444" valign="top" width="10%" align="left">
+<font color="white">
+<li>Menu 1
+<li>Menu 2
+<li>...
+</font>
+</td>
+<td bgcolor="#EEEEEE" valign="top">
+
 <table class="maintable">
 <form {qf_attributes}>
 
@@ -107,6 +119,10 @@ span.qfLabel {
 {qf_error}<br/>
 <!-- END qf_error_loop -->
 <!-- END qf_errors -->
+
+</td>
+</tr>
+</table>
 
 </body>
 </html>
