added style to allow usage of package PEAR::Text_Highlighter to show source codes
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@162116 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/examples.css
+++ b/examples/examples.css
@@ -81,3 +81,22 @@ div.important {
 	background-color: #FFCC66; 
 	font-size: 9pt;
 }
+
+.hl-main {font-family: monospace; font-size:13px;}
+.hl-gutter { background-color: #CCCCCC; padding-right: 10px;
+             font-family: monospace; font-size:13px;}
+.hl-table {border: solid 1px #000000; }
+.hl-default { color: #000000; }
+.hl-code { color: #7f7f33; }
+.hl-brackets { color: #009966; }
+.hl-comment { color: #7F7F7F; }
+.hl-quotes { color: #00007F; }
+.hl-string { color: #7F0000; }
+.hl-identifier { color: #000000; }
+.hl-reserved { color: #7F007F; }
+.hl-inlinedoc { color: #0000FF; }
+.hl-var { color: #0066FF; }
+.hl-url { color: #FF0000; }
+.hl-special { color: #0000FF; }
+.hl-number { color: #007F00; }
+.hl-inlinetags { color: #FF0000; }
