new error management examples for final version 1.2.0 of HTML_Progress (use the new error system plugins rather than PEAR_ErrorStack and Log packages)
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@165641 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/examples.css
+++ b/examples/examples.css
@@ -68,6 +68,15 @@ pre.code {
 	border: 1px solid red;
 }
 
+pre.out { 
+	font-family: Arial, Verdana; 
+	font-size: 12px;
+	background-color: #EEEEEE; 
+	color: black; 
+	padding: 4px; 
+	border: 1px solid red;
+}
+
 div.fig { 
 	font-weight: bold; 
 	font-size: 9px; 
