Prepare examples to be removed from main package and moved into the optional package
git-svn-id: http://svn.php.net/repository/pear/packages/HTML_Progress/trunk@191435 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/examples/templates/itxstatic.html
+++ b/examples/templates/itxstatic.html
@@ -32,10 +32,10 @@
 
 <a name="intro">
 <h2><img src="../images/info.gif"/> Introduction</h2>
-		
+
 <p>This example requires :
 <ul>
-<li>PEAR::HTML_Progress 1.2.0RC3 or better (see source at line 15).</li>
+<li>PEAR::HTML_Progress 1.2.2 or better (see source at line 15).</li>
 <li>PEAR::HTML_QuickForm 3.1.1 or better.</li>
 <li>PEAR::HTML_Template_IT 1.1 or better.</li>
 </ul>
@@ -44,17 +44,17 @@
 <hr/>
 <p><b>This example will run a progress meter embedded into a template file.</b></p>
 
-<p>Template engine is <a href="http://pear.php.net/package/HTML_Template_IT">IT(X)</a>, 
+<p>Template engine is <a href="http://pear.php.net/package/HTML_Template_IT">IT(X)</a>,
 but you could use any others template engine.</p>
 
 <p>On lines 17 thru 32, there is your user-callback (function <b>myFunctionHandler</b>),
 where you do what you want. This callback is attached on progress bar at line 80.</p>
 
-<p>Inside this callback, we will show a custom string (build at line 31) 
+<p>Inside this callback, we will show a custom string (build at line 31)
 at 25% (lines 22 to 24), at 50% (lines 25 to 27), at 100% (lines 28 to 30).</p>
 
-<p>As for all demos, to smooth animation, i've added a <b>sleep</b> method at line 19. 
-Delay depends on value set by <b>setAnimSpeed</b> method at line 75. In real world, 
+<p>As for all demos, to smooth animation, i've added a <b>sleep</b> method at line 19.
+Delay depends on value set by <b>setAnimSpeed</b> method at line 75. In real world,
 you have to do a long task, so delay (sleep) is unnecesary.</p>
 
 <p><b>Tips</b>: to build custom string, you don't forget to set lines 78 and 79.</p>
@@ -68,7 +68,7 @@ you have to do a long task, so delay (sleep) is unnecesary.</p>
 </ul>
 
 <p>Before to run the progress meter at line 107.</p>
-<p><b>Note</b>: usage of quickform is only to show you how to dynamic change look and feel 
+<p><b>Note</b>: usage of quickform is only to show you how to dynamic change look and feel
 of progress meter.</p>
 
 <p>[<a href="#top">Top</a>]</p>
@@ -110,7 +110,7 @@ width  = 320
 <p><img src="../screenshots/itxstatic.png"/></p>
 
 <p>[<a href="#top">Top</a>]</p>
-		
+
 
 <a name="source">
 <h2><img src="../images/source.gif"/>&nbsp;PHP source syntax highlight</h2>
